# FARMWISE-AI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml
Agents/: .env.example  app.py  parser.py  pyproject.toml
Agents/advisory_agent/: __init__.py  agent.py  tools.py
Agents/crop_agent/: __init__.py  agent.py  tools.py
Agents/docs/: index.json
Agents/docs/advisories/: kharif_2024.md  kharif_2026.md  rabi_2024.md  rabi_2026.md
Agents/docs/crop_calendars/: kerala.md  maharashtra.md  punjab.md  rajasthan.md  tamil_nadu.md
Agents/docs/pest_guides/: bajra.md  coconut.md  groundnut.md  maize.md  mustard.md  onion.md  pepper.md  rice.md  tomato.md  wheat.md
Agents/docs/pesticide_reference/: approved_pesticides.md
Agents/irrigation_agent/: __init__.py  agent.py
Agents/market_agent/: __init__.py  agent.py  tools.py
Agents/orchestrator/: __init__.py  agent.py  evalsete8c29b.evalset.json  golden_evalset.evalset.json  tools.py
Agents/orchestrator/.adk/eval_history/: orchestrator_evalsete8c29b_1773297207.8858683.evalset_result.json  orchestrator_evalsete8c29b_1773297740.346038.evalset_result.json  (+3 more)
Agents/pest_agent/: __init__.py  agent.py  tools.py
server/: .env.example  Dockerfile  pyproject.toml
server/alembic/versions/: 20260310_0001_create_farmwise_schema.py  87da6e88fe45_add_sowing_date_to_users.py
server/app/: main.py
server/app/api/: __init__.py  deps.py  router.py
server/app/api/routes/: auth.py  chat.py  data.py  farms.py  (+1 more)
server/app/auth/: jwt.py
server/app/core/: config.py
server/app/db/: __init__.py  models.py  seed.py  session.py
server/app/middleware/: auth_middleware.py  error_handler.py
server/app/schemas/: __init__.py  auth.py  chat.py  common.py  data.py  farm.py
server/app/services/: __init__.py  agent_client.py  auth_service.py  chat_service.py  data_service.py  user_service.py
server/tests/integration/: conftest.py  test_auth.py  test_chat.py  test_data_and_profile.py  test_health.py
server/tests/unit/: test_auth_helpers.py  test_chat_service.py  test_health.py
(+25 files in other folders)
